--- a/helm-custdatasvc/values.yaml
+++ b/helm-custdatasvc/values.yaml
@@ -16,6 +16,13 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
+externalSecrets:
+  dataFrom:
+    - secretRef:
+        name: "$MONGO_DEV_PWD"
+    - secretRef:
+        name: "$NEW_RELIC_PWD"
+
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 # This is to override the chart name.
