--- a/helm-custdatasvc/values.yaml
+++ b/helm-custdatasvc/values.yaml
@@ -5,7 +5,7 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 
-# namespace: workload
+namespace: westnat-digx
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
