--- a/helm-custdatasvc/templates/deployment.yaml
+++ b/helm-custdatasvc/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "custdatasvc.fullname" . }}
+  name: custdatasvc
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "custdatasvc.labels" . | nindent 4 }}
