--- a/helm-custdatasvc/templates/pdb.yaml
+++ b/helm-custdatasvc/templates/pdb.yaml
@@ -4,7 +4,7 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "gateway.name" . }}
+  name: custdatasvc-pdb
   namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ include "gateway.name" . }}
