Update HPA name in hpa.yaml

--- a/helm-custdatasvc/templates/hpa.yaml
+++ b/helm-custdatasvc/templates/hpa.yaml
@@ -2,7 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "custdatasvc.fullname" . }}
+  name: custdatasvc-hpa
   labels:
     {{- include "custdatasvc.labels" . | nindent 4 }}
 spec:
