Rename service account to custdatasvc-sa

--- a/helm-custdatasvc/templates/serviceaccount.yaml
+++ b/helm-custdatasvc/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: custdatasvc
+  name: custdatasvc-sa
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "custdatasvc.labels" . | nindent 4 }}
