Update serviceAccountName in deployment.yaml

--- a/helm-custdatasvc/templates/deployment.yaml
+++ b/helm-custdatasvc/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "custdatasvc.serviceAccountName" . }}
+      serviceAccountName: custdatasvc-sa
       {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
