--- a/helm-custdatasvc/values.yaml
+++ b/helm-custdatasvc/values.yaml
@@ -14,7 +14,7 @@ image:
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "v1"
 
 externalSecrets:
   dataFrom:
